--- a/package.json
+++ b/package.json
@@ -7,5 +7,12 @@
     "@playwright/test": "^1.49.1",
     "@types/node": "^22.10.2"
   },
-  "scripts": {}
+  "scripts": {
+    "test": "npx playwright test",
+    "test:ui": "npx playwright test --ui",
+    "codegen": "npx playwright codegen",
+    "install": "npx playwright install",
+    "report": "npx playwright show-report",
+    "test:debug": "npx playwright test --debug"
+  }
 }
